# stewart_platform

stewart_control/: CMakeLists.txt  package.xml
stewart_control/include/stewart_control/: stewart_control_node.h
stewart_control/launch/: stewart_control.launch
stewart_control/scripts/: control_platform_link.py  controller  piston1_cylinder_link  shaft_control.py  stewart_command_publisher.py  stewart_control.py  stewart_ik.py
stewart_control/src/: IK.h  code.cpp  stewart_control_node.cpp
